--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,15 +1,21 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/mysql8.0
+    url: jdbc:mysql://localhost:3306/sf
     username: root
     password: ww123456
     driver-class-name: com.mysql.cj.jdbc.Driver
   jdbc:
     template:
       query-timeout: 3
+  redis:
+    port: 6379
+    host: localhost
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
+logging:
+  level:
+    com.ww.backend: debug
 
 
 
