--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -16,7 +16,13 @@ mybatis:
 logging:
   level:
     com.ww.backend: debug
-
+mybatis-plus:
+  global-config:
+    db-config:
+      logic-delete-field: deleted
+      logic-not-delete-value: 0
+      logic-delete-value: 1
+#  type-aliases-package: com.ww.backend.*.entity
 
 
 
